@@ -2,8 +2,10 @@ reportbug (4.10.3) UNRELEASED; urgency=low
 
   * reportbug/ui/gtk2_ui.py:
     - rename Forward button to Continue button; Closes: #565140
+    - more selectable labels and use text views for bug replies;
+      thanks to Éric Araujo for the report; Closes: #564447
 
- -- Luca Bruno <lethalman88@gmail.com>  Sat, 30 Jan 2010 21:02:50 +0100
+ -- Luca Bruno <lethalman88@gmail.com>  Sat, 30 Jan 2010 21:54:48 +0100
 
 reportbug (4.10.2) unstable; urgency=low
 
